<resources>
    <string name="app_name">ConnectingWithServer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_forgot_password"><u>Forgot Password?</u></string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="msg_mycotra">MyCotra</string>
    <string name="msg_username">UserName/Email/Phone No</string>
    <string name="msg_password">Password</string>
    <string name="label_login">Login</string>
    <string name="msg_or_login_with">Or login with</string>
    <string name="msg_new_user">New User?</string>
    <string name="label_signup">Signup</string>
    <string name="msg_from">FROM</string>
    <string name="msg_to">TO</string>
    <string name="action_like">Like</string>
    <string name="action_comment">Comment</string>
    <string name="action_share">Share</string>
    <string name="action_ask">Ask</string>
</resources>
