<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tv_user_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/iv_profile_image"
        android:gravity="start"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="@dimen/size_50dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_full_name"
        android:layout_toRightOf="@id/iv_profile_image">

        <ImageView
            android:id="@+id/iv_time_icon"
            android:layout_width="@dimen/size_20dp"
            android:layout_height="@dimen/size_20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:tint="@color/light_grey"
            app:srcCompat="@drawable/history" />

        <TextView
            android:id="@+id/tv_requested_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_5dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/iv_time_icon"
            android:gravity="center_vertical"
            tools:text="TextView" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_trip_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_profile_image"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tv_trip_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_trip_date"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/light_grey"
        android:padding="@dimen/size_5dp"
        android:textColor="@color/red_color"
        android:textSize="13sp"
        tools:text="TextView" />

    <View
        android:id="@+id/view"
        style="@style/DividerLine_vertical"
        android:layout_height="@dimen/size_70dp"
        android:layout_below="@id/iv_profile_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        android:layout_toRightOf="@id/tv_trip_date" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_toEndOf="@+id/view"
        android:text="@string/msg_from"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_from_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_toEndOf="@+id/view"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_from_address"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_toEndOf="@+id/view"
        android:text="@string/msg_to"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_to_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_toEndOf="@+id/view"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="TextView" />

    <LinearLayout
        android:id="@+id/leaner_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_to_address"
        android:layout_marginStart="@dimen/size_5dp"
        android:layout_toEndOf="@+id/view"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_requested_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.98"
            tools:text="TextView" />

        <View
            style="@style/DividerLine_vertical"
            android:layout_height="@dimen/size_10dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_trip_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/size_5dp"
            android:layout_weight="0.98"
            android:gravity="left"
            android:text="TextView" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_action_counts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leaner_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/size_16dp"
        android:text="TextView" />

    <View
        android:id="@+id/line_view"
        style="@style/DividerLine"
        android:layout_below="@+id/tv_action_counts"
        android:layout_marginTop="@dimen/size_10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_view"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:gravity="clip_vertical"
            android:drawableLeft="@drawable/like"
            android:drawablePadding="@dimen/size_5dp"
            android:text="@string/action_like" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/comment"
            android:drawablePadding="@dimen/size_5dp"
            android:text="@string/action_comment" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.95"
            android:drawableLeft="@drawable/share"
            android:drawablePadding="@dimen/size_5dp"
            android:text="@string/action_share" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.90"
            android:drawableLeft="@drawable/add"
            android:drawablePadding="@dimen/size_5dp"
            android:text="@string/action_ask" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/add"
            android:drawablePadding="@dimen/size_5dp"
            android:text="Details" />


    </LinearLayout>
</RelativeLayout>